Test last_name côté affichage d'un Change Log

--- a/netbox/templates/extras/objectchange.html
+++ b/netbox/templates/extras/objectchange.html
@@ -50,7 +50,7 @@
                     <tr>
                         <td>User</td>
                         <td>
-                            {{ objectchange.user|default:objectchange.user_name }}
+                            {{ objectchange.user.last_name|default:objectchange.user_name }}
                         </td>
                     </tr>
                     <tr>
