Change Log: Jinja2 User

--- a/netbox/templates/extras/objectchange.html
+++ b/netbox/templates/extras/objectchange.html
@@ -53,7 +53,7 @@
                             {% if objectchange.user and objectchange.user.first_name and objectchange.user.last_name %}
                                 {{ objectchange.user.first_name }} {{ objectchange.user.last_name }} @({{ objectchange.user }})
                             {% else %}
-                                @{{ objectchange.user_name|default:objectchange.user_name }}
+                                @{{ objectchange.user|default:objectchange.user_name }}
                             {% endif %}
                         </td>
                     </tr>
