Change Log on Home page

--- a/netbox/templates/home.html
+++ b/netbox/templates/home.html
@@ -319,8 +319,14 @@
                                 {% endif %}
                                 <br />
                                 <small>
-                                    <span class="text-muted">{{ change.user|default:change.user_name }} -</span>
                                     <a href="{{ change.get_absolute_url }}" class="text-muted">{{ change.time|date:'SHORT_DATETIME_FORMAT' }}</a>
+                                    <span class="text-muted">-- 
+                                        {% if change.user and change.user.first_name and change.user.last_name %}
+                                            {{ change.user.first_name }} {{ change.user.last_name }} (@{{ change.user }})
+                                        {% else %}
+                                            {{ change.user|default:change.user_name }}
+                                        {% endif %}
+                                    </span>
                                 </small>
                             </div>
                         {% endwith %}
