--- a/netbox/templates/dcim/device.html
+++ b/netbox/templates/dcim/device.html
@@ -581,6 +581,7 @@
                                 {% if perms.dcim.change_interface or perms.dcim.delete_interface %}
                                     <th class="pk"><input type="checkbox" class="toggle" title="Toggle all" /></th>
                                 {% endif %}
+                                <th>Device</th>
                                 <th>Name</th>
                                 <th>LAG</th>
                                 <th>Description</th>
